tests/fixtures/errors/recursive_fn.ksr
// Error: recursive function call detected
fn recurse(x: Dimensionless) -> Dimensionless = recurse(x);
